--- a/Webapi.csproj
+++ b/Webapi.csproj
@@ -13,4 +13,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.8.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
