--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Database=webapi;User=webapi;Password=vertinero2835;"
+  },
+  "JwtSettings": {
+    "Secret": "GsgghagyguygYGYGywgygdyg67676gygy"
   }
 }
